--- a/styles/components/_full-width-section.scss
+++ b/styles/components/_full-width-section.scss
@@ -5,11 +5,13 @@
   max-width: none;
   position: relative;
   left: 0px;
+  left: 50%;
   right: 50%;
-  margin-right: -10vw;
+  margin-left: -50vw;
+  margin-right: -50vw;
 
   &__inner {
-    padding-left: 4.998rem;
+    padding: $space-md * 1.5;
 
     @include media-screen-small {
       padding: $space-md;
